[backport 2.x] Logtypes pr v2 (#482)
Signed-off-by: Subhobrata Dey <sbcd90@gmail.com>
Co-authored-by: Petar Dzepina <petar.dzepina@gmail.com>
(cherry picked from commit 978878100cacf91f5e610eee427387407d3fe73e)